scaling fixes and navLemon removed on mobile

--- a/style/main.scss
+++ b/style/main.scss
@@ -331,6 +331,13 @@ label {
     width: 90%;
     margin-bottom: 5em;
   }
+  body .workwith{
+    background-position: -19% 95%, 0 0;
+  }
+  .navbar-toggler img{
+    display: none;
+  }
+
 
 }
 
